Fix popups' z-index.

--- a/css/styles.css
+++ b/css/styles.css
@@ -43,6 +43,7 @@ button:active {
 #topbar .left {
     float: left;
     font-family: Lobster, cursive;
+    font-size: 20px;
 }
 
 #topbar button {
@@ -71,6 +72,7 @@ button:active {
     background-image: -moz-linear-gradient(top, #FFFFFF 0%, #E2DEDE 100%); /* FF3.6+ */
     background-image: -o-linear-gradient(top, #FFFFFF 0%, #E2DEDE 100%); /* Opera 11.10+ */
     background-image: -ms-linear-gradient(top, #FFFFFF 0%, #E2DEDE 100%); /* IE10+ */
+    z-index: 50;
 }
 
 .popup.active {
